# lms-project

./: .env.example  .env.template  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  create_test_data.py  docker-compose.yml  pyproject.toml  requirements.txt  server_setup.sh  test_api.py
.github/workflows/: ci-cd.yml
.postman/: resources.yaml
lms_project/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_updated_at_lesson_updated_at.py
materials/templates/materials/: index.html
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_status_payment_stripe_price_id_and_more.py
